<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anti_aliasing">Anti-aliasing</string>
    <string name="anti_aliasing_desc">Makes the textures smooth</string>
    <string name="app_name">GFX-PUBG</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_again">Ask again</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_donate">DONATE</string>
    <string name="button_rate">RATE APP</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color_quality">Color Format</string>
    <string name="color_quality_desc">64bit for quality, 32bit for fps</string>
    <string name="com.crashlytics.android.build_id">f6fee721786640bba046200ea552aef9</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_config">CREATE CONFIG FILES</string>
    <string name="default_web_client_id">941138728899-od56nld1mo39kblvg2kunch71oinop79.apps.googleusercontent.com</string>
    <string name="denied_title">Permissions</string>
    <string name="detail_quality">Detail Mode</string>
    <string name="detail_quality_desc">Useless details, reduce for performance</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">DONE</string>
    <string name="donation">Donation</string>
    <string name="donation_info">Any donation disables all ads forever.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="faq1">1. Does not support Android 11+. In the future only with ROOT access.</string>
    <string name="faq2">1. GFX 100% SAFE. You can play without the risk of being banned.</string>
    <string name="faq3">2. Small interface buttons? - Reduce resolution.</string>
    <string name="faq4">3. If You want save your game settings like controls, etc - use \'Save Control\' option.</string>
    <string name="faq5">4. By downloading or using this applications, you agree to the collection and use of your information in accordance with this Privacy Policy. If you do not wish us to collect and use your data in the way described in this Privacy Policy, you should stop using our applications.</string>
    <string name="faq_pp">Privacy Policy</string>
    <string name="firebase_database_url">https://gfxtool-3109a.firebaseio.com</string>
    <string name="foliage_distance">Foliage LOD Distance</string>
    <string name="foliage_distance_desc">Trees, bushes, etc.</string>
    <string name="fps">FPS</string>
    <string name="gameversion">Select game version:</string>
    <string name="privacy_policy1">Privacy Police</string>
    <string name="privacy_policy10">How We Use Collected Information</string>
    <string name="privacy_policy11">We use the information we collect about you for providing our applications and other services to you, optimizing our applications and your user experience, providing customer service support, contacting you as part of customer service or to send you updates about our applications and services.</string>
    <string name="privacy_policy12">We may also use your information for research, analysis, business planning, tracking potential problems or trends with our applications, testing out new application features and content.</string>
    <string name="privacy_policy13">Third Party Advertisers</string>
    <string name="privacy_policy14">We show third party advertisements in our applications. Our advertising partners may collect information about you when you use our applications and use this information for the targeted advertising. Advertisers on mobile devices may use advertising identifiers, such as Android advertising ID, to enable and optimize their advertising. Advertising identifiers are non-permanent, non-personal device identifiers. You can reset these identifiers or indicate your preference that they should not be used for advertising purposes by changing the settings of your device.</string>
    <string name="privacy_policy15">Our applications and websites may contain links to third party websites, services, and/or applications (including advertising that may link to a third party). We are not responsible for the privacy practices, safety, and the content of these websites, services, and/or applications.</string>
    <string name="privacy_policy16">Privacy Policy Updates</string>
    <string name="privacy_policy17">We may occasionally update this Privacy Policy. This version of the Privacy Policy was last updated on 24 jul 2023.</string>
    <string name="privacy_policy18">Contact</string>
    <string name="privacy_policy19">If you have questions regarding this Privacy Policy, please contact us via e-mail at kashtbhanjaninfotech@gmail.com.</string>
    <string name="privacy_policy2">KBIA - Kasht Bhanjan Infotech App</string>
    <string name="privacy_policy3">This Privacy Policy applies to all applications of tsoml on mobile devices, personal computers or on other platforms.</string>
    <string name="privacy_policy4">By downloading or using our applications, you agree to the collection and use of your information in accordance with this Privacy Policy. If you do not wish us to collect and use your data in the way described in this Privacy Policy, you should stop using our applications.</string>
    <string name="privacy_policy5">What Information We Collect</string>
    <string name="privacy_policy6">If you contact us, we may collect and process the information that you freely provide to us. This information includes the content of your e-mails, messages and comments, responses to messages that we send to you, your interactions with us on social media websites and third party platforms. The collected information may include your e-mail addresses, user names or other personal information if you decided to provide it when you contacted us.</string>
    <string name="privacy_policy7">We use analytics tools, which may include third party analytics tools, to collect information about how you use our applications and those tools may use cookies or other similar tracking technologies. You can disable cookies through your web or phone browser settings.</string>
    <string name="privacy_policy8">We use the Firebase analytics in our applications. Please refer to: https://firebase.google.com/terms/analytics/.</string>
    <string name="privacy_policy9">We use AdSense (AdMob) advertising service in our applications. Please refer also to https://www.google.com/policies/technologies/partner-sites/ for additional information.</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_info1">1. We no longer work with subscriptions. All user funds are fully refunded, and subscriptions are automatically canceled.</string>
    <string name="subscription_info2">2. Remember: you can always check and cancel any of your subscriptions in your account manager in Google Play.</string>
    <string name="tv_donate">You can also support the project with this button ;)</string>
</resources>