<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/section_label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/faq2"
        android:textColor="@color/color_text_main"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/section_label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/faq3"
        android:textColor="@color/color_text_main"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/section_label4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/faq4"
        android:textColor="@color/color_text_main"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/section_label5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/faq5"
        android:textColor="@color/color_text_main"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="17dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLuck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq_pp"
            android:textColor="@color/color_on_primary"
            app:rippleColor="@color/color_ripple" />
    </LinearLayout>

    <TextView
        android:id="@+id/donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/donation"
        android:textColor="@color/color_text_main"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sub_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/donation_info"
        android:textColor="@color/color_text_main" />

    <TextView
        android:id="@+id/subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/subscription"
        android:textColor="@color/color_text_main"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subscription_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/subscription_info1"
        android:textColor="@color/color_text_main" />

    <TextView
        android:id="@+id/subscription_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/subscription_info2"
        android:textColor="@color/color_text_main" />

    <LinearLayout
        android:id="@+id/bannerf1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:orientation="vertical"/>


    <LinearLayout
        android:id="@+id/bannerf2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" />

</LinearLayout>
